# np-generation

./: .gitignore  LICENSE  README.md  infer.py  pyproject.toml  train.py
data/: merges.txt  vocab.json
model/: merges.txt  vocab.json
notebooks/: docking.ipynb  metrics.ipynb
np-generation/: tokenizer.py
np_generation/: data.py  generation.py  model.py  tokenizer.py
np_generation/analysis/: 3d_descriptors.py  docking.py
np_generation/libs/: chirality.py
scripts/: infer.py  train.py
