[project]
name = "np-generation"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "kohbanye", email = "kohbanye@gmail.com" }
]
dependencies = [
    "torch>=2.3.0",
    "pytorch-lightning>=2.2.4",
    "transformers>=4.40.1",
    "tokenizers>=0.19.1",
    "rdkit>=2023.9.6",
    "wandb>=0.16.6",
    "smilespe>=0.0.3",
    "swig>=4.3.0",
    "vina>=1.2.5",
    "ipykernel>=6.29.5",
    "polars>=1.8.2",
    "matplotlib>=3.7.5",
    "seaborn>=0.13.2",
    "pyarrow>=17.0.0",
    "e3fp>=1.2.5",
    "timeout-decorator>=0.5.0",
    "scikit-learn>=1.3.2",
    "umap-learn>=0.5.7",
    "py3dmol>=2.4.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
dev-dependencies = [
    "ruff>=0.4.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/np_generation"]
